tests/diagnostics/naming/underscore_prefix/used_underscore_binding/expect.txt
# exit: 1
input/main.lang0:2:5: error: bindings prefixed with '_' must be unused: '_value' is used
      _value := 1
      ^
